--- a/.gitignore
+++ b/.gitignore
@@ -77,6 +77,8 @@ target/
 
 # Jupyter Notebook
 .ipynb_checkpoints
+# is this Jupiter or VS code?
+.virtual_documents
 
 # IPython
 profile_default/
